@@ -5,17 +5,22 @@ author = Luke Saunders <luke.saunders@gmail.com>
 author = Alexander Hartmaier <abraxxa@cpan.org>
 author = Florian Ragwitz <rafl@debian.org>
 license = Perl_5
-copyright_holder = Luke Saunders, Nicholas Perez, et al.
+copyright_holder = Luke Saunders, Nicholas Perez, Alexander Hartmaier, et al.
 
-[@Classic]
+[@Basic]
 
 [PodWeaver]
-[BumpVersion]
+[PodSyntaxTests]
+[PodCoverageTests]
 [PkgVersion]
-[PodVersion]
 [NextRelease]
+[MetaConfig]
+[MetaJSON]
+
 [MetaResources]
-repository                          = git://git.shadowcat.co.uk/catagits/Catalyst-Controller-DBIC-API
+repository.type = git
+repository.url = git://git.shadowcat.co.uk/catagits/Catalyst-Controller-DBIC-API
+repository.web = http://git.shadowcat.co.uk/gitweb/gitweb.cgi?p=catagits/Catalyst-Controller-DBIC-API.git
 
 [Prereq]
 DBIx::Class = 0.08103
